--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6"
   },
@@ -20,10 +20,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.1.1",
     "babel-polyfill": "^6.26.0",
     "eslint": "^5.6.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.81.0"
   }
 }
